add localization support for email and password fields in login screen

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -1,4 +1,10 @@
 {
   "password": "كلمة المرور",
-  "login": "تسجيل الدخول"
+  "login": "تسجيل الدخول",
+  "email": "عنوان البريد الإلكتروني",
+  "enter_your_email": "أدخل بريدك الإلكتروني",
+  "enter_your_password": "أدخل كلمة المرور الخاصة بك",
+  "need_help": "تحتاج مساعدة؟",
+  "secure_login": "تسجيل دخول آمن",
+  "welcome_back": "مرحبًا بعودتك"
 }
