add icons for dashboard, doctors, patients, clinics, reports, and profile; update localization files

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -6,5 +6,12 @@
   "enter_your_password": "أدخل كلمة المرور الخاصة بك",
   "need_help": "تحتاج مساعدة؟",
   "secure_login": "تسجيل دخول آمن",
-  "welcome_back": "مرحبًا بعودتك"
+  "welcome_back": "مرحبًا بعودتك",
+  "dashboard": "لوحة التحكم",
+  "doctors": "الأطباء",
+  "patients": "المرضى",
+  "clinics": "العيادات",
+  "reports": "التقارير",
+  "profile": "الملف الشخصي",
+  "logout": "تسجيل الخروج"
 }
