--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -6,5 +6,12 @@
   "enter_your_password": "Enter your password",
   "need_help": "Need help?",
   "secure_login": "Secure Login",
-  "welcome_back": "Welcome back"
+  "welcome_back": "Welcome back",
+  "dashboard": "Dashboard",
+  "doctors": "Doctors",
+  "patients": "Patients",
+  "clinics": "Clinics",
+  "reports": "Reports",
+  "profile": "Profile",
+  "logout": "Logout"
 }
