add registration functionality; implement register page and navigation from login

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -13,5 +13,8 @@
   "clinics": "العيادات",
   "reports": "التقارير",
   "profile": "الملف الشخصي",
-  "logout": "تسجيل الخروج"
+  "logout": "تسجيل الخروج",
+  "register": "تسجيل",
+  "phone_number": "رقم الهاتف",
+  "address": "العنوان"
 }
