--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -23,5 +23,6 @@
   "last_name": "الاسم الأخير",
   "enter_your_first_name": "أدخل اسمك الأول",
   "enter_your_last_name": "أدخل اسم عائلتك",
-    "user_name": "اسم المستخدم"
+  "user_name": "اسم المستخدم",
+  "enter_your_user_name": "أدخل اسم المستخدم الخاص بك"
 }
