--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -12,7 +12,6 @@
   "patients": "المرضى",
   "clinics": "العيادات",
   "reports": "التقارير",
-  "profile": "الملف الشخصي",
   "logout": "تسجيل الخروج",
   "register": "تسجيل",
   "phone_number": "رقم الهاتف",
@@ -24,5 +23,6 @@
   "enter_your_first_name": "أدخل اسمك الأول",
   "enter_your_last_name": "أدخل اسم عائلتك",
   "user_name": "اسم المستخدم",
-  "enter_your_user_name": "أدخل اسم المستخدم الخاص بك"
+  "enter_your_user_name": "أدخل اسم المستخدم الخاص بك",
+  "profile": "الملف الشخصي"
 }
