--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -24,5 +24,15 @@
   "enter_your_last_name": "أدخل اسم عائلتك",
   "user_name": "اسم المستخدم",
   "enter_your_user_name": "أدخل اسم المستخدم الخاص بك",
-  "profile": "الملف الشخصي"
+  "profile": "الملف الشخصي",
+    "pending_requests": "الطلبات المعلقة",
+    "requires_attention": "يتطلب اهتمامًا",
+    "active_doctors": "الأطباء النشطون",
+    "all_active": "جميع النشطين",
+    "Registered_clinics": "العيادات المسجلة",
+    "registered_patients": "المرضى المسجلين",
+    "active_users": "المستخدمون النشطون",
+    "clinic": "العيادة",
+    "view_details": "عرض التفاصيل",
+    "pending": "قيد الانتظار"
 }
