add approval functionality for doctors and clinics; update API endpoints and localization strings

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -36,5 +36,9 @@
   "view_details": "عرض التفاصيل",
   "pending": "قيد الانتظار",
   "registered_clinics": "العيادات المسجلة",
-  "pending_requests_require_immediate_attention": "الطلبات المعلقة تتطلب اهتمامًا فوريًا"
+  "pending_requests_require_immediate_attention": "الطلبات المعلقة تتطلب اهتمامًا فوريًا",
+  "admin_dashboard": "لوحة تحكم المشرف",
+  "approve": "الموافقة",
+  "reject": "رفض",
+  "assign_clinic": "تعيين العيادة"
 }
